--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,7 @@ target/
 .kotlin
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/vcs.xml
-.idea/misc.xml
-.idea/material_theme_project_new.xml.xml
-.idea/encodings.xml.xml
-.idea/dictionaries
-.idea/
+.idea
 *.iws
 *.iml
 *.ipr
