--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -1,18 +1,23 @@
 # Log files location
-property.basePath=test-outputs/Logs
-appender=file, stdout
+property.basePath=test-output/Logs
 # Define the file appender
 appender.file.type=File
 appender.file.name=fileAppender
-appender.file.fileName=${basePath}/log_${date:yyyy-MM-dd_hh-mm-ss a}.log
+appender.file.fileName=${basePath}/logs.log
 appender.file.layout.type=PatternLayout
-appender.file.layout.pattern=[%level] %d{dd-MM-yyyy HH:mm:ss} [%t] [%c] - %msg%n
-# Define the stdout appender
+appender.file.layout.disableAnsi=false
+appender.file.filter.threshold.type=ThresholdFilter
+appender.file.filter.threshold.level=debug
+appender.file.layout.pattern=[%p] - [%d{dd-MM-yyyy HH:mm:ss}] [%t] [%c] - %msg%n
+# Define the stdout (console) appender
 appender.stdout.type=Console
 appender.stdout.name=consoleAppender
 appender.stdout.layout.type=PatternLayout
-appender.stdout.layout.pattern=[%level] %d{dd-MM-yyyy HH:mm:ss} [%t] [%c] - %msg%n
-# Configure root logger
-rootLogger.level=TRACE
+appender.stdout.layout.disableAnsi=false
+appender.stdout.filter.threshold.type=ThresholdFilter
+appender.stdout.filter.threshold.level=debug
+appender.stdout.layout.pattern=%highlight{[%p] - [%d{dd-MM-yyyy HH:mm:ss}] [%t] [%c] - %msg}{FATAL=red, ERROR=red bold, WARN=yellow bold, INFO=blue, DEBUG=green bold, TRACE=black}%n
+# Configure root logger (attach both appenders)
+rootLogger=debug, consoleAppender, fileAppender
 rootLogger.appenderRef.file.ref=fileAppender
 rootLogger.appenderRef.stdout.ref=consoleAppender
